--- a/src/Busybee/SecurityBundle/Resources/views/Group/edit.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Group/edit.html.twig
@@ -3,7 +3,7 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-{% block title %}Busybee - {{ 'group.edit.title'|trans }}{% endblock title %}
+{% block title %}{{ 'group.edit.title'|trans }}{% endblock title %}
 {% block titleBlock %}
 <div class="jumbotron">
 	<h1>{{ 'group.edit.title'|trans }}</h1>
