--- a/src/Busybee/SecurityBundle/Resources/views/Group/new.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Group/new.html.twig
@@ -3,7 +3,7 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-{% block title %}Busybee - {{ 'group.new.title'|trans }}{% endblock title %}
+{% block title %}{{ 'group.new.title'|trans }}{% endblock title %}
 {% block titleBlock %}
 
 <div class="jumbotron">
