--- a/src/Busybee/SecurityBundle/Resources/views/Role/list.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Role/list.html.twig
@@ -3,7 +3,7 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-{% block title %}Busybee - {{ 'role.list.title'|trans }}{% endblock title %}
+{% block title %}{{ 'role.list.title'|trans }}{% endblock title %}
 {% block titleBlock %}
 	<div class="jumbotron">
 		<h1>{{ 'role.list.title'|trans }}</h1>
