--- a/src/Busybee/SecurityBundle/Resources/views/User/edit.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/edit.html.twig
@@ -10,7 +10,7 @@
 {% endblock stylesheets %}
 
 
-{% block title %}Busybee - {{ 'user.edit.title'|trans }}{% endblock title %}
+{% block title %}{{ 'user.edit.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'user.edit.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'user.edit.description'|trans }}{% endblock headerLead %}
 
