--- a/src/Busybee/SecurityBundle/Resources/views/User/request.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/request.html.twig
@@ -4,7 +4,7 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-{% block title %}Busybee - {{ 'security.request.title'|trans }}{% endblock title %}
+{% block title %}{{ 'security.request.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'security.request.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'security.request.description'|trans }}{% endblock headerLead %}
 
