--- a/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Install/misc.html.twig
@@ -4,7 +4,7 @@
 {% block menuContainer %}{% endblock menuContainer %}
 
 {% trans_default_domain 'SystemBundle' %}
-{% block title %}Busybee - {{ 'system.install.title'|trans }}{% endblock title %}
+{% block title %}{{ 'system.install.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'system.install.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'system.install.description'|trans }}{% endblock headerLead %}
 
