--- a/src/Busybee/SystemBundle/Resources/views/Plugin/manage.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Plugin/manage.html.twig
@@ -4,7 +4,7 @@
 {% trans_default_domain 'SystemBundle' %}
 
 
-{% block title %}Busybee - {{ 'plugin.manage.title'|trans }}{% endblock title %}
+{% block title %}{{ 'plugin.manage.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'plugin.manage.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'plugin.manage.description'|trans }}{% endblock headerLead %}
 
