--- a/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
@@ -4,7 +4,7 @@
 {% trans_default_domain 'SystemBundle' %}
 
 
-{% block title %}Busybee - {{ 'system.update.title'|trans }}{% endblock title %}
+{% block title %}{{ 'system.update.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'system.update.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'system.update.description'|trans }}{% endblock headerLead %}
 
