--- a/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/sign-in-form.html.twig
@@ -8,10 +8,14 @@
 			<input type="text" id="username" class="form-control input-sm" name="_username" value="{{ last_username|default("") }}" placeholder="{{ 'Username/Email'|trans }}" />
 		</div>
 		<div class="form-group">
-			<input type="password" id="password" name="_password" class="form-control input-sm" placeholder="{{ 'Password'|trans }}" />
+			<div class="input-group">
+				<input type="password" id="password" name="_password" class="form-control input-sm"
+					   placeholder="{{ 'Password'|trans }}"/>
+				<span class="input-group-btn"><button type="submit" class="btn btn-success halflings halflings-log-in"
+													  style="min-height: 30px; margin-top: -2px; margin-left: 0px;"></button></span>
+			</div>
 		</div>
 		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-		<button type="submit" class="btn btn-success">{{ 'Sign In'|trans }}</button>
 		{% if get_parameter('google.oauth') == 'on' %}
 			<a href="{{ path('google_oauth') }}" title="{{ 'google.oauth'|trans }}"><img src="{{ asset('img/Google_icon_2015.png') }}" width="35" /></a>
 		{% endif %}
