--- a/src/Busybee/PersonBundle/Resources/views/Person/panelHeader.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/panelHeader.html.twig
@@ -10,12 +10,12 @@
 
 <div class="panel-heading">
     <h3 class="panel-title">{{ header|trans({'%name%': form.vars.value.formatName}) }}
-		<button title='{{ 'person.return'|trans}}' type="button" class="halflings halflings-hand-left btn btn-primary" onClick="window.open('{{ path('person_manage', {'currentSearch': currentSearch}) }}','_self')" style="float: right"></button>
+        {{ returnButton({'title': 'person.return', 'transDomain': 'BusybeePersonBundle', 'windowOpen': {'route': path('person_manage', {'currentSearch': currentSearch})}})|raw }}
 		{% if id != 'Add' %}
-			<button title='{{ 'person.add.title'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('person_edit', {'id': 'Add', 'currentSearch': currentSearch}) }}','_self')" style="float: right"></button>
+            {{ addButton({'title': 'person.add.title', 'transDomain': 'BusybeePersonBundle', 'windowOpen': {'route': path('person_edit', {'id': 'Add', 'currentSearch': currentSearch})}})|raw }}
 		{% endif %}
-		<button title='{{ 'form.cancel'|trans({}, 'BusybeeHomeBundle') }}' type="button" onClick="location.href='{{ path('person_edit', {'id': id, 'currentSearch': currentSearch}) }}'" class="halflings halflings-remove-circle btn btn-info" style="float: right"></button>
-		<button title='{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}' type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
+        {{ resetButton()|raw }}
+        {{ saveButton()|raw }}
 		{% if form.dob.vars.data is not empty %}
             {% set difference = date('now').diff(date(form.dob.vars.data)) %}
 			{% set years = difference.y %}
