--- a/src/Busybee/SecurityBundle/Resources/views/Security/login_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/Security/login_content.html.twig
@@ -2,10 +2,12 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-
 <div class="form_error container"></div>
 
 <form action="{{ path("busybee_security_check") }}" method="post"  class="{{ ajaxOn }}">
+    {% set h3Content = miscButton({'windowOpen': {'route': path("busybee_security_resetting_request")}, 'transDomain': 'BusybeeSecurityBundle', 'class': 'btn btn-info halflings halflings-question-sign', 'title': 'security.login.forgot', 'type': 'button'}) %}
+    {% set h3Content = h3Content ~ miscButton({'transDomain': 'BusybeeSecurityBundle', 'class': 'btn btn-success halflings halflings-log-in', 'title': 'security.login.submit', 'type': 'submit'}) %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'security.login.title', 'transDomain': 'BusybeeSecurityBundle'} %}
 	<div id="form_body" class="container-fluid">
 		<div class="row">
 			<div class="well col-sm-6">
@@ -21,12 +23,7 @@
 					<input type="password" id="password" name="_password" required class="form-control" />
 				</div>
 			</div>
-			<div class="well col-sm-6 col-sm-offset-6 text-right">
-				<div class="form-group">
-					<button type="submit" id="_submit" name="_submit" class="btn btn-success glyphicons glyphicons-pen" >{{ 'security.login.submit'|trans }}</button>
-					<button type="button" class="btn btn-info glyphicons glyphicons-restart" onclick="location.href='{{ path("busybee_security_resetting_request") }}'">{{ 'security.login.forgot'|trans }}</button>
-				</div>
-			</div>
 		</div>
 	</div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 </form>	
