--- a/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
@@ -21,7 +21,8 @@
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users<span class="caret"></span></a>
 		<ul class="dropdown-menu">
 			{% if is_granted('ROLE_USER') %}<li><a href="{{ path("security_user_edit") }}">Update User: {{ app.user.username }}</a></li> {% endif %}
-			{% if is_granted('ROLE_ADMIN') %}<li><a href="{{ path("security_user_register") }}">Register</a></li>{% endif %}
+            {% if is_granted('ROLE_ADMIN') %}
+				<li><a href="{{ path("person_manage") }}">Register</a></li>{% endif %}
 			{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
 				<li><a href="{{ path('home_page', {'_switch_user': '_exit'}) }}">Exit impersonation</a></li>
 				<li><a href="{{ path("security_user_reset_request") }}">Reset Password</a></li>
