--- a/src/Busybee/SystemBundle/Resources/views/Setting/manage.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Setting/manage.html.twig
@@ -3,7 +3,7 @@
 
 {% trans_default_domain 'SystemBundle' %}
 
-{% block title %}Busybee - {{ 'system.setting.manage.title'|trans }}{% endblock title %}
+{% block title %}{{ 'system.setting.manage.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'system.setting.manage.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'system.setting.manage.description'|trans }}{% endblock headerLead %}
 
