--- a/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.js.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.js.twig
@@ -1,13 +1,16 @@
 <script type="text/javascript">
-    $(".monitorChange").change(function(e) {
+    $(".monitorChange").change(function (e){
         $(".formChanged").prop("disabled", true);
-    });
-    $(".changeRecord").change(function(e) {
+    $("button[type='reset']").prop('disabled', true);
+})
+
+    $(".changeRecord").change(function (e){
         var path = "{{ path(route, {'id': '__id__'}) }}";
         var id = $(this).val();
         window.open(path.replace('__id__', id),'_self');
-    });
-    $("button[type='reset']").click(function(e) {
+})
+
+    $("button[type='reset']").click(function (e){
         $(".formChanged").prop("disabled", false);
     })
-</script>
+</script>;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
