--- a/src/Busybee/InstituteBundle/Resources/views/HomeRoom/index.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/HomeRoom/index.html.twig
@@ -4,71 +4,69 @@
 
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% block title %}{{ parent() }}{{ 'homeroom.title'|trans }}{% endblock title %}
+{% block title %}{{ 'homeroom.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'homeroom.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'homeroom.description'|trans }}{% endblock headerLead %}
 
 {% block contentContainer %}
     {% include 'PaginationBundle:Default:index.html.twig' %}
-    <div class="panel panel-primary busybee-panel">
-        <div class="panel-heading">
-            <h3 class="panel-title">{{ 'homeroom.title'|trans}}</h3>
-        </div>
-        <div class="panel-body">
-            <div class="container-fluid well">
-                <div class="row row-header">
-                    <div class="col-sm-3 col-md-3" style="display: inline-block;">
-                        {% if pagination.getSortByName == 'Name' %}
-                            <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.name'|trans }}
-                        {% else %}
-                            {{ 'homeroom.label.name'|trans }}
-                        {% endif %}
-                    </div>
-                    <div class="col-sm-2 col-md-2" style="display: inline-block;">
-                        {% if pagination.getSortByName == 'Short Name' %}
-                            <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.nameShort'|trans }}
-                        {% else %}
-                            {{ 'homeroom.label.nameShort'|trans }}
-                        {% endif %}
-                    </div>
-                    <div class="col-sm-3 col-md-3" style="display: inline-block;">
-                        {% if pagination.getSortByName == 'Room' %}
-                            <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.campusResource'|trans }}
-                        {% else %}
-                            {{ 'homeroom.label.campusResource'|trans }}
-                        {% endif %}
-                    </div>
-                    <div class="col-sm-2 col-md-2" style="display: inline-block;">
-                        {% if pagination.getSortByName == 'Year' %}
-                            <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.schoolYear'|trans }}
-                        {% else %}
-                            {{ 'homeroom.label.schoolYear'|trans }}
-                        {% endif %}
-                    </div>
-                    <div class="col-sm-2 col-md-2 withAdd">
-                        <button title="{{ 'homeroom.add.title'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('home_room_edit', {'id': 'Add'}) }}','_self')"></button> {{ 'actions'|trans({}, 'BusybeeHomeBundle') }}
-                    </div>
-                </div>
-                {% for homeroom in pagination.getResult %}
-                    <div class="row row-striped">
-                        <div class="col-sm-3 col-md-3 form-inline">
-                            {{ homeroom.name }}
-                        </div>
-                        <div class="col-sm-2 col-md-2 form-inline">
-                            {{ homeroom.nameShort }}
-                        </div>
-                        <div class="col-sm-3 col-md-3 form-inline">
-                            {{ homeroom.room }}
-                        </div>
-                        <div class="col-sm-2 col-md-2 form-inline">
-                            {{ homeroom.year }}
-                        </div>
-                        <div class="col-sm-2 col-md-2 form-inline">
-                            <button title='{{ 'homeroom.edit.title'|trans}}' type="button" class="halflings halflings-edit btn btn-warning" onClick="window.open('{{ path('home_room_edit', {'id': homeroom.id}) }}','_self')"></button>
-                        </div>
-                    </div>
-                {% endfor %}
+    {% set h3Content = addButton({'title': 'homeroom.add.title', 'transDomain': 'BusybeeInstituteBundle', 'windowOpen': {'route': path('home_room_edit', {'id': 'Add'})}}) %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'homeroom.title', 'transDomain': 'BusybeeInstituteBundle'} %}
+    <div class="container-fluid well">
+        <div class="row row-header">
+            <div class="col-sm-3 col-md-3" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Name' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.name'|trans }}
+                {% else %}
+                    {{ 'homeroom.label.name'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-2 col-md-2" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Short Name' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.nameShort'|trans }}
+                {% else %}
+                    {{ 'homeroom.label.nameShort'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-3 col-md-3" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Room' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.campusResource'|trans }}
+                {% else %}
+                    {{ 'homeroom.label.campusResource'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-2 col-md-2" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Year' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'homeroom.label.schoolYear'|trans }}
+                {% else %}
+                    {{ 'homeroom.label.schoolYear'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-2 col-md-2 withAdd">
+                {{ 'actions'|trans({}, 'BusybeeHomeBundle') }}
             </div>
         </div>
-    </div>
+        {% for homeroom in pagination.getResult %}
+            <div class="row row-striped">
+                <div class="col-sm-3 col-md-3 form-inline">
+                    {{ homeroom.name }}
+                </div>
+                <div class="col-sm-2 col-md-2 form-inline">
+                    {{ homeroom.nameShort }}
+                </div>
+                <div class="col-sm-3 col-md-3 form-inline">
+                    {{ homeroom.room }}
+                </div>
+                <div class="col-sm-2 col-md-2 form-inline">
+                    {{ homeroom.year }}
+                </div>
+                <div class="col-sm-2 col-md-2 form-inline">
+                    <button title='{{ 'homeroom.edit.title'|trans }}' type="button"
+                            class="halflings halflings-edit btn btn-warning"
+                            onClick="window.open('{{ path('home_room_edit', {'id': homeroom.id}) }}','_self')"></button>
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {% endblock contentContainer %}
