Campus Resource Management
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.js.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.js.twig
@@ -1,6 +1,6 @@
-<script type="text/javascript">
-    $(".monitorChange").change(function (e){
-        $(".formChanged").prop("disabled", true);
+<script type='text/javascript'>
+    $('.monitorChange').change(function (e){
+    $('.formChanged').prop("disabled", true);
     $("button[type='reset']").prop('disabled', true);
 })
 
@@ -13,4 +13,4 @@
     $("button[type='reset']").click(function (e){
         $(".formChanged").prop("disabled", false);
     })
-</script>;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+</script>;
